[project]
name = "<name-placeholder-underscore>"
description = "<description-placeholder>"
authors = [{ name = "Samuel Pedro" }]
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"
fallback-version = "0.0.0"

[tool.ruff]
lint.select = ["A", "B", "C", "D", "E", "F", "I", "N", "W"]
lint.ignore = ["D104", "D105", "D107", "D203", "D205", "D212", "D401", "F811"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.14.
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
case-sensitive = true
force-wrap-aliases = true
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.coverage.report]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
